Logic implementation, frontend changes

--- a/backend/Training.CircleSquareGame/Training.CircleSquareGame.Api/Properties/launchSettings.json
+++ b/backend/Training.CircleSquareGame/Training.CircleSquareGame.Api/Properties/launchSettings.json
@@ -3,26 +3,25 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:47205",
-      "sslPort": 44328
+      "applicationUrl": "http://localhost:53779/",
+      "sslPort": 44383
     }
   },
   "profiles": {
-    "Training.CircleSquareGame.Api": {
-      "commandName": "Project",
-      "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
-    },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    },
+    "Training.CircleSquareGame.Api": {
+      "commandName": "Project",
+      "launchBrowser": true,
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      },
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
